clean up overflow and fix hero in small screens

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,14 @@
 
 body,
 html {
+  width: 100%;
   height: 100%;
   font-family: "Lato", sans-serif;
 }
 
 .app {
+  width: 100%;
   height: 100%;
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
 }
