--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -1,19 +1,19 @@
 @media screen and (max-width: 1920px) and (max-height: 1080px) {
   .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/photo-couch.jpg");
+    background-image: url("../../assets/photo-couch.jpg");
   }
 }
 
 @media screen and (min-width: 1921px) and (min-height: 1081px) {
   .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/photo-couch_2x.jpg");
+    background-image: url("../../assets/photo-couch_2x.jpg");
   }
 }
 
 .hero {
-  height: 75%;
+  height: 75vh;
+  width: 100%;
+  min-width: 100%;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -21,8 +21,9 @@
 
   display: flex;
   flex-direction: row;
-  padding: 1em;
-  align-items: flex-end;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  align-items: center;
 
   color: white;
 }
@@ -32,6 +33,14 @@
   margin-bottom: auto;
   margin-left: 15vw;
   margin-right: 15vw;
+}
+
+.hero-header h1 {
+  font-weight: 300;
+}
+
+.hero-header h2 {
+  font-weight: 300;
 }
 
 .hero-header button {
