--- a/src/components/TitleBar/index.css
+++ b/src/components/TitleBar/index.css
@@ -1,8 +1,6 @@
 .titlebar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  /*position: fixed;*/
   width: 100%;
   height: 10vh;
   background-color: #222222;
@@ -15,4 +13,17 @@
   margin-right: 15vw;
   filter: invert(86%) sepia(17%) saturate(1573%) hue-rotate(103deg)
     brightness(97%) contrast(84%);
+}
+
+/* picked a random size larger than a mobile device */
+@media screen and (max-width: 800px) {
+  .titlebar {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 801px) {
+  .titlebar {
+    justify-content: space-between;
+  }
 }
